--- a/Chrome extensions/Apratments filter/package.json
+++ b/Chrome extensions/Apratments filter/package.json
@@ -4,7 +4,8 @@
   "description": "Apartments filter chrome extension",
   "main": "index.js",
   "scripts": {
-    "start": "rm -rf dist && webpack --watch --progress --config webpack.config.js"
+    "start": "webpack --watch --progress --config webpack.dev.js",
+    "build": "webpack --watch --progress --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
@@ -12,6 +13,7 @@
     "@types/chrome": "^0.0.188",
     "@types/react": "^18.0.11",
     "@types/react-dom": "^18.0.5",
+    "clean-webpack-plugin": "^4.0.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.7.1",
     "html-webpack-plugin": "^5.5.0",
@@ -23,6 +25,7 @@
     "ts-loader": "^9.3.0",
     "typescript": "^4.7.3",
     "webpack": "^5.73.0",
-    "webpack-cli": "^4.9.2"
+    "webpack-cli": "^4.9.2",
+    "webpack-merge": "^5.8.0"
   }
 }
