--- a/Chrome extensions/bypass sign up blocker/package.json
+++ b/Chrome extensions/bypass sign up blocker/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack --watch --progress --config webpack.dev.js",
-    "build": "webpack --watch --progress --config webpack.prod.js"
+    "build": "rm -rf /dist && webpack --watch --progress --config webpack.prod.js"
   },
   "author": "",
   "license": "ISC",
